chore(package): adds scope to package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue3-affix",
+  "name": "@unnamed-nic/vue3-affix",
   "version": "0.0.1",
   "description": "Simple affixer in vue 3",
   "main": "src/index.js",
